--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -5,9 +5,12 @@ header {
 .header-container {
     position: fixed;
     z-index: 10;
+    top: 0px;
 
     width: 100%;
     height: 60px;
+
+    background-color: white;
 }
 
 .header-flex {
@@ -65,7 +68,13 @@ header {
     width: auto;
     height: 11px;
 
+    animation: none;
+
     font-weight: 400;
+}
+
+.site-header-button:active{
+    animation: none;
 }
 
 .site-header-button:hover{
